     Invoking the new TOPLEVEL restart provides the same functionality.
  ** The GO debugger command is also gone, since you can just invoke
     the CONTINUE restart directly instead.
  ** The TOP debugger command is also gone, since it's redundant with the
     FRAME 0 command, and since it interfered with abbreviations for the
     TOPLEVEL restart.
* removed bug 21 from BUGS, since Martin Atzmueller points out that 
  it doesn't seem to affect SBCL after all
* The system now recovers better from non-PACKAGE values of the *PACKAGE*
  variable.
* The system now understands compound CONS types (e.g. (CONS FIXNUM T))
  as required by ANSI. (thanks to Douglas Crosher's CMU CL patches, with
  some porting work by Martin Atzmueller)
* Martin Atzmueller reviewed the CMU CL mailing lists and came back
  with a boatload of patches which he ported to SBCL. Now that those
  have been applied,
  ** The system tries to make sure that its low-priority messages
     are prefixed by semicolons, to help people who like to use
     syntax highlighting in their ILISP buffer. (This patch
     was originally due to Raymond Toy.)
  ** The system now optimizes INTEGER-LENGTH better, thanks to more
     patches originally written by Raymond Toy.
  ** The compiler understands coercion between single-value and 
     multiple-VALUES type expressions better, getting rid of some very
     weird behavior, thanks to patches originally by Robert MacLachlan
     and Douglas Crosher.
  ** The system understands ANSI-style non-KEYWORD &KEY arguments in 
     lambda lists, thanks to a patch originally by Pierre Mai.
  ** The system no longer bogusly warns about "abbreviated type
     declarations".
  ** The compiler gets less confused by inlining and RETURN-FROM,
     thanks to some patches originally by Tim Moore.
  ** The system no longer hangs when dumping circular lists to fasl
     files, thanks to a patch originally from Douglas Crosher.